Тесты уровня Middle. Сократил повторяемость кода, начал использовать реквестеры, реквесты и модели. Добавил класс для генерации логина/пароля клиента. Попробовал сократить количество моделей, но понял что полностью унифицировать их невозможно. При развитии проекта будут нужны новые модели. Придется их дописывать. Лучше сразу добавить модель для реквестера, чтобы использовать его когда он будет нужен.